Added error.html and entry.html plus additional changes

--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -8,8 +8,8 @@
     <h1>All Pages</h1>
 
     <ul>
-        {% for entry in entries %}
-            <li>{{ entry }}</li>
+        {% for entry_name in entries %}
+            <li><a href="{% url 'entry' entry_name %}">{{ entry_name }}</a></li>
         {% endfor %}
     </ul>
 
